--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,19 @@
 <html>
-    <body>
-        <h1><%= title%></h1>
-        <a href="new">new message</a>
-        <ul>
-            <% messages.forEach((message) => { %>
-                <li>
-                    <p><%= message.user%></p>
-                    <p><%= message.text%></p>
-                    <p><%= message.added%></p>
-                </li>
-            <%});%>
-        </ul>
-    </body>
+<head>
+    <title>Message Board</title>
+    <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+    <h1><%= title %></h1>
+    <a href="/new">New Message</a>
+    <ul>
+        <% messages.forEach((message) => { %>
+            <li>
+                <p class="user"><%= message.user %></p>
+                <p class="text"><%= message.text %></p>
+                <p class="added"><%= message.added %></p>
+            </li>
+        <% }); %>
+    </ul>
+</body>
 </html>
