Added a postgre db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
     <ul>
         <% messages.forEach((message) => { %>
             <li>
-                <p class="user"><%= message.user %></p>
-                <p class="text"><%= message.text %></p>
-                <p class="added"><%= message.added %></p>
+                <p class="user"><%= message.author %></p>
+                <p class="text"><%= message.message %></p>
+                <p class="added"><%= new Date() %></p>
             </li>
         <% }); %>
     </ul>
